--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2018"
 license = "MIT"
 
 [badges]
-
+travis-ci = { repository = "https://travis-ci.org/skreimeyer/civil", branch = "master" }
+codecov = { repository = "https://codecov.io/gh/skreimeyer/civil", branch = "master" }
 [dependencies]
